tests/reference/asr-implicit_call_02-41b0bc6.stderr
semantic error: Type mismatch in argument `x`: expected `integer[:]` but got `integer(8)[:]`
  --> tests/errors/ilp64_implicit_interface_array.f90:11:19
   |
11 |     call test_sub(arr)
   |                   ^^^ 
